Fixed clipping issue for mobile

--- a/home.css
+++ b/home.css
@@ -75,9 +75,8 @@
     width: 100%;
   }
   .navbar{
-    width: 100%;
+    width: 100vw;
     margin: 0;
-    justify-content: center;
   }
   .navbar ul{
     list-style-type:none;
@@ -87,6 +86,7 @@
   }
   .navbar a{
     width: 80%;
+    font-size: calc(2vw - 2px);
   }
   .navbar li{
     flex: 1; /* makes the buttons same sized src=w3school*/
@@ -100,6 +100,9 @@
   }
   .centralBody{
     display: block;
+  }
+  .mainWrapper img{
+    width: 50%;
   }
   .footer{
     margin-left: 7%;
